@@ -536,9 +536,14 @@ def build_recordingsList(__addonuri__, __addonhandle__):
     
     director=[]
     cast=[]
+    
+    if showInfo[0]['cr'] != []:
+		director = showInfo[0]['cr']['director']
+		cast = showInfo[0]['cr']['actor']
     date = datetime.datetime.fromtimestamp(start).strftime('%d.%m.%Y')
-    meta.update({'title':label,'date':date,'year':showInfo[0]['year'], 'plot':showInfo[0]['d'], 'country':showInfo[0]['country'],'director':showInfo[0]['cr']['director'], 'cast':showInfo[0]['cr']['actor'], 'genre':', '.join(showInfo[0]['g'])  })
+    meta.update({'title':label,'date':date,'year':showInfo[0]['year'], 'plot':showInfo[0]['d'], 'country':showInfo[0]['country'],'director':director, 'cast':cast, 'genre':', '.join(showInfo[0]['g'])  })
     meta.update({'sorttitle':record['title']})
+   
     '''
     #mark watched
     if (position>end-660):  #10min padding from zattoo +1min safety margin
