@@ -1,4 +1,9 @@
 ===================================================
+[B]ZattooHiQ v1.7.0.8 [/B]26.02.2020 Steffen Rolapp
+===================================================
+- Fehler beim Erstellen behoben
+
+===================================================
 [B]ZattooHiQ v1.7.0.7 [/B]18.02.2020 Steffen Rolapp
 ===================================================
 - Dolby Digital Unterstüzung hinzugefügt
