@@ -1,6 +1,10 @@
-===================================================
+====================================================
+[B]ZattooHiQ-19 v1.0.3 [/B]19.02.2020 Steffen Rolapp
+====================================================
+- Fehler beim Erstellen der Aufnahmeliste behoben
+====================================================
 [B]ZattooHiQ-19 v1.0.1 [/B]19.02.2020 Steffen Rolapp
-===================================================
+====================================================
 - Verzeichnis-Struktur an Kodi Richtlinien angepasst
 - Dolby Digital Unterstützung hinzu gefügt
 - Zattoo Urls angepasst
